src/main/c/clang-c/Index.h


typedef struct CXTranslationUnitImpl *CXTranslationUnit;
typedef struct CXVersion {
  int Major;
  int Minor;
  int Subminor;
} CXVersion;
enum CXCursorKind {
  CXCursor_UnexposedDecl                 = 1,
  CXCursor_StructDecl                    = 2,
  CXCursor_UnionDecl                     = 3,
  CXCursor_ClassDecl                     = 4,
  CXCursor_EnumDecl                      = 5,
  CXCursor_FieldDecl                     = 6,
  CXCursor_EnumConstantDecl              = 7,
  CXCursor_FunctionDecl                  = 8,
  CXCursor_VarDecl                       = 9,
  CXCursor_ParmDecl                      = 10,
  CXCursor_ObjCInterfaceDecl             = 11,
  CXCursor_ObjCCategoryDecl              = 12,
  CXCursor_ObjCProtocolDecl              = 13,
  CXCursor_ObjCPropertyDecl              = 14,
  CXCursor_ObjCIvarDecl                  = 15,
  CXCursor_ObjCInstanceMethodDecl        = 16,
  CXCursor_ObjCClassMethodDecl           = 17,
  CXCursor_ObjCImplementationDecl        = 18,
  CXCursor_ObjCCategoryImplDecl          = 19,
  CXCursor_TypedefDecl                   = 20,
  CXCursor_CXXMethod                     = 21,
  CXCursor_Namespace                     = 22,
  CXCursor_LinkageSpec                   = 23,
  CXCursor_Constructor                   = 24,
  CXCursor_Destructor                    = 25,
  CXCursor_ConversionFunction            = 26,
  CXCursor_TemplateTypeParameter         = 27,
  CXCursor_NonTypeTemplateParameter      = 28,
  CXCursor_TemplateTemplateParameter     = 29,
  CXCursor_FunctionTemplate              = 30,
  CXCursor_ClassTemplate                 = 31,
  CXCursor_ClassTemplatePartialSpecialization = 32,
  CXCursor_NamespaceAlias                = 33,
  CXCursor_UsingDirective                = 34,
  CXCursor_UsingDeclaration              = 35,
  CXCursor_TypeAliasDecl                 = 36,
  CXCursor_ObjCSynthesizeDecl            = 37,
  CXCursor_ObjCDynamicDecl               = 38,
  CXCursor_CXXAccessSpecifier            = 39,
  CXCursor_FirstDecl                     = CXCursor_UnexposedDecl,
  CXCursor_LastDecl                      = CXCursor_CXXAccessSpecifier,
  CXCursor_FirstRef                      = 40, 
  CXCursor_ObjCSuperClassRef             = 40,
  CXCursor_ObjCProtocolRef               = 41,
  CXCursor_ObjCClassRef                  = 42,
  CXCursor_TypeRef                       = 43,
  CXCursor_CXXBaseSpecifier              = 44,
  CXCursor_TemplateRef                   = 45,
  CXCursor_NamespaceRef                  = 46,
  CXCursor_MemberRef                     = 47,
  CXCursor_LabelRef                      = 48,
  CXCursor_OverloadedDeclRef             = 49,
  CXCursor_VariableRef                   = 50,
  CXCursor_LastRef                       = CXCursor_VariableRef,
  CXCursor_FirstInvalid                  = 70,
  CXCursor_InvalidFile                   = 70,
  CXCursor_NoDeclFound                   = 71,
  CXCursor_NotImplemented                = 72,
  CXCursor_InvalidCode                   = 73,
  CXCursor_LastInvalid                   = CXCursor_InvalidCode,
  CXCursor_FirstExpr                     = 100,
  CXCursor_UnexposedExpr                 = 100,
  CXCursor_DeclRefExpr                   = 101,
  CXCursor_MemberRefExpr                 = 102,
  CXCursor_CallExpr                      = 103,
  CXCursor_ObjCMessageExpr               = 104,
  CXCursor_BlockExpr                     = 105,
  CXCursor_IntegerLiteral                = 106,
  CXCursor_FloatingLiteral               = 107,
  CXCursor_ImaginaryLiteral              = 108,
  CXCursor_StringLiteral                 = 109,
  CXCursor_CharacterLiteral              = 110,
  CXCursor_ParenExpr                     = 111,
  CXCursor_UnaryOperator                 = 112,
  CXCursor_ArraySubscriptExpr            = 113,
  CXCursor_BinaryOperator                = 114,
  CXCursor_CompoundAssignOperator        = 115,
  CXCursor_ConditionalOperator           = 116,
  CXCursor_CStyleCastExpr                = 117,
  CXCursor_CompoundLiteralExpr           = 118,
  CXCursor_InitListExpr                  = 119,
  CXCursor_AddrLabelExpr                 = 120,
  CXCursor_StmtExpr                      = 121,
  CXCursor_GenericSelectionExpr          = 122,
  CXCursor_GNUNullExpr                   = 123,
  CXCursor_CXXStaticCastExpr             = 124,
  CXCursor_CXXDynamicCastExpr            = 125,
  CXCursor_CXXReinterpretCastExpr        = 126,
  CXCursor_CXXConstCastExpr              = 127,
  CXCursor_CXXFunctionalCastExpr         = 128,
  CXCursor_CXXTypeidExpr                 = 129,
  CXCursor_CXXBoolLiteralExpr            = 130,
  CXCursor_CXXNullPtrLiteralExpr         = 131,
  CXCursor_CXXThisExpr                   = 132,
  CXCursor_CXXThrowExpr                  = 133,
  CXCursor_CXXNewExpr                    = 134,
  CXCursor_CXXDeleteExpr                 = 135,
  CXCursor_UnaryExpr                     = 136,
  CXCursor_ObjCStringLiteral             = 137,
  CXCursor_ObjCEncodeExpr                = 138,
  CXCursor_ObjCSelectorExpr              = 139,
  CXCursor_ObjCProtocolExpr              = 140,
  CXCursor_ObjCBridgedCastExpr           = 141,
  CXCursor_PackExpansionExpr             = 142,
  CXCursor_SizeOfPackExpr                = 143,
  CXCursor_LambdaExpr                    = 144,
  CXCursor_ObjCBoolLiteralExpr           = 145,
  CXCursor_LastExpr                      = CXCursor_ObjCBoolLiteralExpr,
  CXCursor_FirstStmt                     = 200,
  CXCursor_UnexposedStmt                 = 200,
  CXCursor_LabelStmt                     = 201,
  CXCursor_CompoundStmt                  = 202,
  CXCursor_CaseStmt                      = 203,
  CXCursor_DefaultStmt                   = 204,
  CXCursor_IfStmt                        = 205,
  CXCursor_SwitchStmt                    = 206,
  CXCursor_WhileStmt                     = 207,
  CXCursor_DoStmt                        = 208,
  CXCursor_ForStmt                       = 209,
  CXCursor_GotoStmt                      = 210,
  CXCursor_IndirectGotoStmt              = 211,
  CXCursor_ContinueStmt                  = 212,
  CXCursor_BreakStmt                     = 213,
  CXCursor_ReturnStmt                    = 214,
  CXCursor_GCCAsmStmt                    = 215,
  CXCursor_AsmStmt                       = CXCursor_GCCAsmStmt,
  CXCursor_ObjCAtTryStmt                 = 216,
  CXCursor_ObjCAtCatchStmt               = 217,
  CXCursor_ObjCAtFinallyStmt             = 218,
  CXCursor_ObjCAtThrowStmt               = 219,
  CXCursor_ObjCAtSynchronizedStmt        = 220,
  CXCursor_ObjCAutoreleasePoolStmt       = 221,
  CXCursor_ObjCForCollectionStmt         = 222,
  CXCursor_CXXCatchStmt                  = 223,
  CXCursor_CXXTryStmt                    = 224,
  CXCursor_CXXForRangeStmt               = 225,
  CXCursor_SEHTryStmt                    = 226,
  CXCursor_SEHExceptStmt                 = 227,
  CXCursor_SEHFinallyStmt                = 228,
  CXCursor_MSAsmStmt                     = 229,
  CXCursor_NullStmt                      = 230,
  CXCursor_DeclStmt                      = 231,
  CXCursor_LastStmt                      = CXCursor_DeclStmt,
  CXCursor_TranslationUnit               = 300,
  CXCursor_FirstAttr                     = 400,
  CXCursor_UnexposedAttr                 = 400,
  CXCursor_IBActionAttr                  = 401,
  CXCursor_IBOutletAttr                  = 402,
  CXCursor_IBOutletCollectionAttr        = 403,
  CXCursor_CXXFinalAttr                  = 404,
  CXCursor_CXXOverrideAttr               = 405,
  CXCursor_AnnotateAttr                  = 406,
  CXCursor_AsmLabelAttr                  = 407,
  CXCursor_LastAttr                      = CXCursor_AsmLabelAttr,
  CXCursor_PreprocessingDirective        = 500,
  CXCursor_MacroDefinition               = 501,
  CXCursor_MacroExpansion                = 502,
  CXCursor_MacroInstantiation            = CXCursor_MacroExpansion,
  CXCursor_InclusionDirective            = 503,
  CXCursor_FirstPreprocessing            = CXCursor_PreprocessingDirective,
  CXCursor_LastPreprocessing             = CXCursor_InclusionDirective,
  CXCursor_ModuleImportDecl              = 600,
  CXCursor_FirstExtraDecl                = CXCursor_ModuleImportDecl,
  CXCursor_LastExtraDecl                 = CXCursor_ModuleImportDecl
};
typedef struct {
  enum CXCursorKind kind;
  int xdata;
  void *data[3];
} CXCursor;
typedef struct CXPlatformAvailability {
  CXString Platform;
  CXVersion Introduced;
  CXVersion Deprecated;
  CXVersion Obsoleted;
  int Unavailable;
  CXString Message;
} CXPlatformAvailability;
CINDEX_LINKAGE int
clang_getCursorPlatformAvailability(CXCursor cursor,
                                    int *always_deprecated,
                                    CXString *deprecated_message,
                                    int *always_unavailable,
                                    CXString *unavailable_message,
                                    CXPlatformAvailability *availability,
                                    int availability_size);
CINDEX_LINKAGE void
clang_disposeCXPlatformAvailability(CXPlatformAvailability *availability);
CINDEX_LINKAGE enum CXLanguageKind clang_getCursorLanguage(CXCursor cursor);
CINDEX_LINKAGE CXTranslationUnit clang_Cursor_getTranslationUnit(CXCursor);
typedef struct CXCursorSetImpl *CXCursorSet;
CINDEX_LINKAGE CXCursorSet clang_createCXCursorSet();
CINDEX_LINKAGE void clang_disposeCXCursorSet(CXCursorSet cset);
CINDEX_LINKAGE unsigned clang_CXCursorSet_contains(CXCursorSet cset,
                                                   CXCursor cursor);
CINDEX_LINKAGE unsigned clang_CXCursorSet_insert(CXCursorSet cset,
                                                 CXCursor cursor);
CINDEX_LINKAGE CXCursor clang_getCursorSemanticParent(CXCursor cursor);
CINDEX_LINKAGE CXCursor clang_getCursorLexicalParent(CXCursor cursor);
CINDEX_LINKAGE void clang_getOverriddenCursors(CXCursor cursor, 
                                               CXCursor **overridden,
                                               unsigned *num_overridden);
CINDEX_LINKAGE void clang_disposeOverriddenCursors(CXCursor *overridden);
CINDEX_LINKAGE void clang_executeOnThread(void (*fn)(void*), void *user_data,
                                          unsigned stack_size);