src/main/java/clang/ClangLibrary.java

	/**
	 * \brief Determine the availability of the entity that this cursor refers to<br>
	 * on any platforms for which availability information is known.<br>
	 * * \param cursor The cursor to query.<br>
	 * * \param always_deprecated If non-NULL, will be set to indicate whether the <br>
	 * entity is deprecated on all platforms.<br>
	 * * \param deprecated_message If non-NULL, will be set to the message text <br>
	 * provided along with the unconditional deprecation of this entity. The client<br>
	 * is responsible for deallocating this string.<br>
	 * * \param always_unavailable If non-NULL, will be set to indicate whether the<br>
	 * entity is unavailable on all platforms.<br>
	 * * \param unavailable_message If non-NULL, will be set to the message text<br>
	 * provided along with the unconditional unavailability of this entity. The <br>
	 * client is responsible for deallocating this string.<br>
	 * * \param availability If non-NULL, an array of CXPlatformAvailability instances<br>
	 * that will be populated with platform availability information, up to either<br>
	 * the number of platforms for which availability information is available (as<br>
	 * returned by this function) or \c availability_size, whichever is smaller.<br>
	 * * \param availability_size The number of elements available in the <br>
	 * \c availability array.<br>
	 * * \returns The number of platforms (N) for which availability information is<br>
	 * available (which is unrelated to \c availability_size).<br>
	 * * Note that the client is responsible for calling <br>
	 * \c clang_disposeCXPlatformAvailability to free each of the <br>
	 * platform-availability structures returned. There are <br>
	 * \c min(N, availability_size) such structures.<br>
	 * Original signature : <code>int clang_getCursorPlatformAvailability(CXCursor, int*, CXString*, int*, CXString*, CXPlatformAvailability*, int)</code><br>
	 * <i>native declaration : src/main/c/clang-c/Index.h:2265</i>
	 */
	int clang_getCursorPlatformAvailability(CXCursor.ByValue cursor, IntBuffer always_deprecated, CXString deprecated_message, IntBuffer always_unavailable, CXString unavailable_message, CXPlatformAvailability availability, int availability_size);
	/**
	 * \brief Free the memory associated with a \c CXPlatformAvailability structure.<br>
	 * Original signature : <code>void clang_disposeCXPlatformAvailability(CXPlatformAvailability*)</code><br>
	 * <i>native declaration : src/main/c/clang-c/Index.h:2277</i>
	 */
	void clang_disposeCXPlatformAvailability(CXPlatformAvailability availability);
	/**
	 * \brief Determine the "language" of the entity referred to by a given cursor.<br>
	 * Original signature : <code>CXLanguageKind clang_getCursorLanguage(CXCursor)</code><br>
	 * <i>native declaration : src/main/c/clang-c/Index.h:2293</i>
	 */
	int clang_getCursorLanguage(CXCursor.ByValue cursor);
	/**
	 * \brief Returns the translation unit that a cursor originated from.<br>
	 * Original signature : <code>CXTranslationUnit clang_Cursor_getTranslationUnit(CXCursor)</code><br>
	 * <i>native declaration : src/main/c/clang-c/Index.h:2298</i>
	 */
	ClangLibrary.CXTranslationUnit clang_Cursor_getTranslationUnit(CXCursor.ByValue CXCursor1);
	/**
	 * \brief Creates an empty CXCursorSet.<br>
	 * Original signature : <code>CXCursorSet clang_createCXCursorSet()</code><br>
	 * <i>native declaration : src/main/c/clang-c/Index.h:2309</i>
	 */
	ClangLibrary.CXCursorSet clang_createCXCursorSet();
	/**
	 * \brief Disposes a CXCursorSet and releases its associated memory.<br>
	 * Original signature : <code>void clang_disposeCXCursorSet(CXCursorSet)</code><br>
	 * <i>native declaration : src/main/c/clang-c/Index.h:2314</i>
	 */
	void clang_disposeCXCursorSet(ClangLibrary.CXCursorSet cset);
	/**
	 * \brief Queries a CXCursorSet to see if it contains a specific CXCursor.<br>
	 * * \returns non-zero if the set contains the specified cursor.<br>
	 * Original signature : <code>int clang_CXCursorSet_contains(CXCursorSet, CXCursor)</code><br>
	 * <i>native declaration : src/main/c/clang-c/Index.h:2321</i>
	 */
	int clang_CXCursorSet_contains(ClangLibrary.CXCursorSet cset, CXCursor.ByValue cursor);
	/**
	 * \brief Inserts a CXCursor into a CXCursorSet.<br>
	 * * \returns zero if the CXCursor was already in the set, and non-zero otherwise.<br>
	 * Original signature : <code>int clang_CXCursorSet_insert(CXCursorSet, CXCursor)</code><br>
	 * <i>native declaration : src/main/c/clang-c/Index.h:2329</i>
	 */
	int clang_CXCursorSet_insert(ClangLibrary.CXCursorSet cset, CXCursor.ByValue cursor);
	/**
	 * \brief Determine the semantic parent of the given cursor.<br>
	 * * The semantic parent of a cursor is the cursor that semantically contains<br>
	 * the given \p cursor. For many declarations, the lexical and semantic parents<br>
	 * are equivalent (the lexical parent is returned by <br>
	 * \c clang_getCursorLexicalParent()). They diverge when declarations or<br>
	 * definitions are provided out-of-line. For example:<br>
	 * * \code<br>
	 * class C {<br>
	 *  void f();<br>
	 * };<br>
	 * * void C::f() { }<br>
	 * \endcode<br>
	 * * In the out-of-line definition of \c C::f, the semantic parent is the <br>
	 * the class \c C, of which this function is a member. The lexical parent is<br>
	 * the place where the declaration actually occurs in the source code; in this<br>
	 * case, the definition occurs in the translation unit. In general, the <br>
	 * lexical parent for a given entity can change without affecting the semantics<br>
	 * of the program, and the lexical parent of different declarations of the<br>
	 * same entity may be different. Changing the semantic parent of a declaration,<br>
	 * on the other hand, can have a major impact on semantics, and redeclarations<br>
	 * of a particular entity should all have the same semantic context.<br>
	 * * In the example above, both declarations of \c C::f have \c C as their<br>
	 * semantic context, while the lexical context of the first \c C::f is \c C<br>
	 * and the lexical context of the second \c C::f is the translation unit.<br>
	 * * For global declarations, the semantic parent is the translation unit.<br>
	 * Original signature : <code>CXCursor clang_getCursorSemanticParent(CXCursor)</code><br>
	 * <i>native declaration : src/main/c/clang-c/Index.h:2365</i>
	 */
	CXCursor.ByValue clang_getCursorSemanticParent(CXCursor.ByValue cursor);
	/**
	 * \brief Determine the lexical parent of the given cursor.<br>
	 * * The lexical parent of a cursor is the cursor in which the given \p cursor<br>
	 * was actually written. For many declarations, the lexical and semantic parents<br>
	 * are equivalent (the semantic parent is returned by <br>
	 * \c clang_getCursorSemanticParent()). They diverge when declarations or<br>
	 * definitions are provided out-of-line. For example:<br>
	 * * \code<br>
	 * class C {<br>
	 *  void f();<br>
	 * };<br>
	 * * void C::f() { }<br>
	 * \endcode<br>
	 * * In the out-of-line definition of \c C::f, the semantic parent is the <br>
	 * the class \c C, of which this function is a member. The lexical parent is<br>
	 * the place where the declaration actually occurs in the source code; in this<br>
	 * case, the definition occurs in the translation unit. In general, the <br>
	 * lexical parent for a given entity can change without affecting the semantics<br>
	 * of the program, and the lexical parent of different declarations of the<br>
	 * same entity may be different. Changing the semantic parent of a declaration,<br>
	 * on the other hand, can have a major impact on semantics, and redeclarations<br>
	 * of a particular entity should all have the same semantic context.<br>
	 * * In the example above, both declarations of \c C::f have \c C as their<br>
	 * semantic context, while the lexical context of the first \c C::f is \c C<br>
	 * and the lexical context of the second \c C::f is the translation unit.<br>
	 * * For declarations written in the global scope, the lexical parent is<br>
	 * the translation unit.<br>
	 * Original signature : <code>CXCursor clang_getCursorLexicalParent(CXCursor)</code><br>
	 * <i>native declaration : src/main/c/clang-c/Index.h:2401</i>
	 */
	CXCursor.ByValue clang_getCursorLexicalParent(CXCursor.ByValue cursor);
	/**
	 * \brief Determine the set of methods that are overridden by the given<br>
	 * method.<br>
	 * * In both Objective-C and C++, a method (aka virtual member function,<br>
	 * in C++) can override a virtual method in a base class. For<br>
	 * Objective-C, a method is said to override any method in the class's<br>
	 * base class, its protocols, or its categories' protocols, that has the same<br>
	 * selector and is of the same kind (class or instance).<br>
	 * If no such method exists, the search continues to the class's superclass,<br>
	 * its protocols, and its categories, and so on. A method from an Objective-C<br>
	 * implementation is considered to override the same methods as its<br>
	 * corresponding method in the interface.<br>
	 * * For C++, a virtual member function overrides any virtual member<br>
	 * function with the same signature that occurs in its base<br>
	 * classes. With multiple inheritance, a virtual member function can<br>
	 * override several virtual member functions coming from different<br>
	 * base classes.<br>
	 * * In all cases, this function determines the immediate overridden<br>
	 * method, rather than all of the overridden methods. For example, if<br>
	 * a method is originally declared in a class A, then overridden in B<br>
	 * (which in inherits from A) and also in C (which inherited from B),<br>
	 * then the only overridden method returned from this function when<br>
	 * invoked on C's method will be B's method. The client may then<br>
	 * invoke this function again, given the previously-found overridden<br>
	 * methods, to map out the complete method-override set.<br>
	 * * \param cursor A cursor representing an Objective-C or C++<br>
	 * method. This routine will compute the set of methods that this<br>
	 * method overrides.<br>
	 * <br>
	 * \param overridden A pointer whose pointee will be replaced with a<br>
	 * pointer to an array of cursors, representing the set of overridden<br>
	 * methods. If there are no overridden methods, the pointee will be<br>
	 * set to NULL. The pointee must be freed via a call to <br>
	 * \c clang_disposeOverriddenCursors().<br>
	 * * \param num_overridden A pointer to the number of overridden<br>
	 * functions, will be set to the number of overridden functions in the<br>
	 * array pointed to by \p overridden.<br>
	 * Original signature : <code>void clang_getOverriddenCursors(CXCursor, CXCursor**, unsigned*)</code><br>
	 * <i>native declaration : src/main/c/clang-c/Index.h:2446</i><br>
	 * @deprecated use the safer methods {@link #clang_getOverriddenCursors(clang.CXCursor.ByValue, com.sun.jna.ptr.PointerByReference, java.nio.IntBuffer)} and {@link #clang_getOverriddenCursors(clang.CXCursor.ByValue, com.sun.jna.ptr.PointerByReference, com.sun.jna.ptr.IntByReference)} instead
	 */
	@Deprecated
	void clang_getOverriddenCursors(CXCursor.ByValue cursor, PointerByReference overridden, IntByReference num_overridden);
